--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ app.*.symbols
 # Firebase config files
 google-services.json
 GoogleService-Info.plist
+firebase_options.dart
 
 # Local configuration
 .env
