Refactor Firebase options to use environment variables and update dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   # AdMob Integration
   google_mobile_ads: ^5.1.0
+  # Environment variables
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -42,6 +44,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
 
 # Add the flutter_launcher_icons configuration
 flutter_launcher_icons:
