--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
+  firebase_app_check: ^0.3.2+4  # Added Firebase App Check
   mobile_scanner: ^6.0.0
   image_picker: ^1.0.7
   path_provider: ^2.1.2  # Add path_provider for local file storage
