feat: Implement user avatar customization feature
- Added UserProvider to manage user data and avatar state.
- Created AvatarCustomizationScreen for users to customize their avatars.
- Introduced AvatarService for handling avatar-related operations.
- Implemented UserAvatar widget to display user avatars with editing options.
- Added support for emoji, generated, and initials avatars.
- Updated UserModel to include avatar data and type.
- Enhanced ProfileScreen to integrate avatar customization.
- Added SafeSvgImage widget for safe SVG loading.
- Updated pubspec.yaml to include flutter_svg dependency.
- Updated .gitignore to exclude new documentation files.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_animate: ^4.2.0
   auto_size_text: ^3.0.0
   font_awesome_flutter: ^10.6.0
+  # SVG support for generated avatars
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
